# flow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README_RU.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
flow/: __init__.py  cli.py  config.py  core.py  database.py  db.py  format.py  lambda.py  log.py  main.py  models.py  sample_config.json  sample_config.yaml  schema.sql  storage.py  telegram.py  tg.py  types.py  vk.py
flow/api/: telegram.py  tg.py  vk.py
scripts/: prepare_artifact.sh
tests/: conftest.py  test_db.py  test_main.py  test_tg.py  test_vk.py
