[tool.poetry]
name = "flow"
version = "0.0.9"
description = "Lambda app for reposting posts from VK to Telegram"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
repository = "https://github.com/vrslev/flow"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
requests = "^2.26.0"
base-telegram-bot = "0.0.1"
base-vk-api = "0.0.1"
python-dotenv = "^0.19.2"
boto3 = "^1.21.31"
sentry-sdk = "^1.5.7"
MarkupSafe = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "2.17.0"
pytest = "7.1.1"
pytest-cov = "3.0.0"
pytest-randomly = "3.11.0"
boto3-stubs = {extras = ["s3"], version = "^1.21.31"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportPrivateUsage = false

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
]
