[tool.poetry]
name = "flow"
version = "0.0.9"
description = "Lambda app for reposting posts from VK to Telegram"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
repository = "https://github.com/vrslev/flow"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
requests = "^2.26.0"
base-telegram-bot = "0.0.2"
base-vk-api = "0.0.2"
python-dotenv = "^0.20.0"
boto3 = "^1.22.4"
sentry-sdk = "^1.5.10"
MarkupSafe = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "2.18.1"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-randomly = "3.11.0"
boto3-stubs = {extras = ["s3"], version = "^1.22.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportPrivateUsage = false

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
]
