[metadata]
name = flow
version = attr: flow.__version__
description = App to repost posts from VK group to Telegram channel
author = vrslev
author_email = mail@vrslev.com
home_page = https://github.com/vrslev/flow
license = MIT
classifiers =
    "License :: OSI Approved :: MIT License"
    "Programming Language :: Python"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.9"

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9


[options.entry_points]
console_scripts =
    flow = flow.cli:cli

install_requires =
    vk-api~=11.9.4
    python-telegram-bot~=13.7
    click~=8.0.1
    schedule~=1.1.0
    

